2002-11-24  Gregory John Casamento  <greg_casamento@yahoo.com>

	* GormFilesOwner.m: -[GormFilesOwner classInspectorClassName]
	implemented to return @"GormNotApplicableInspector".
	* GormDocument.m: -[GormFirstResponder classInspectorClassName]
	same as above.
	
2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Gorm.m: -[GormClassProxy inspectorClassName]:
	changed to return @"GormNotApplicableInspector" so that
	when a user creates a new subclass in the class editor an
	inspector no longer appears which contains "GormClassProxy"
	which is an internal class.

2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Gorm.m: -[GormClassProxy classInspectorClassName]:
	changed to return @"GormNotApplicableInspector" so that
	when a user creates a new subclass in the class editor an
	inspector no longer appears which contains "GormClassProxy"
	which is an internal class.
	
2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Palettes/0Menus/main.m: removed -[NSWindow setLevel:]
	which sets the menu window being dragged to NSSubmenuLevel.
	This makes it easier to place the menu item. 

2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Palettes/1Windows/main.m: Added code to 
	-[GormPanelMaker initWithCoder:] and -[GormWindowMaker initWithCoder:]
	to order the window/panel to the front when added.   Previously, it
	was difficult to find the window/panel after adding it.
	
2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* GormDocument.m: Modified removeConnectionsWithLabel:.. to return
	a boolean to indicate if action/outlet was removed.  Also modified
	the code so that the alert only appears if a connection actually
	exists.
	
2002-11-23  Gregory John Casamento  <greg_casamento@yahoo.com>

	* GormDocument.m: -[GormDocument createClassFiles:] fixed problem
	which was getting the classname from the currently selected row in
	the classesView.  It now calls -[GormOutlineView itemBeingEdited] to