@@ -141,6 +141,11 @@ NSString *GormLinkPboardType = @"GormLinkPboardType";
       return nil;
     }
 }
+
+- (NSString*) classInspectorClassName
+{
+  return @"GormNotApplicableInspector";
+}
 @end
 
 // add methods to all of the template objects for use
